# AuMath

./: .gitignore  CLAUDE.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  repomix-output.xml  tsconfig.json  vitest.config.ts
app/: apple-icon.tsx  default.tsx  error.tsx  global-error.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: AccountMenu.tsx  AddQuestionForm.tsx  BackfillKnowledgeButton.tsx  CanvasScratchpad.tsx  DifficultyRating.tsx  FavoriteFolderBar.tsx  HomeSidebar.tsx  InteractiveMathSandbox.tsx  KnowledgeTree.tsx  LectureDocument.tsx  LoginForm.tsx  MathGeometryDrawer.tsx  MathRenderer.tsx  MobileMenuDrawer.tsx  MockPapers.tsx  NotificationBell.tsx  PageLayout.tsx  PaperList.tsx  PrintContainer.tsx  ProvenanceBadge.tsx  QuestionCard.tsx  QuestionInteractiveSandbox.tsx  QuestionSearch.tsx  SearchBox.tsx  SidebarTabs.tsx  SignupForm.tsx  SiteViewsBadge.tsx  SortSelect.tsx  ThemeToggle.tsx  TopicCategories.tsx  TopicTree.tsx  WorkspaceSection.tsx
docs/: 定理库-PRD.md  竞赛日历-PRD.md  解题工作台-PRD.md  题源溯源徽章-PRD.md
lib/: mockData.ts  normalizeLatex.ts  normalizeLatexSmart.ts  notifications.ts
math-cv-service/: README.md  requirements-detection.txt  requirements-pipeline-a.txt  requirements.txt
rust/latex-normalizer/: Cargo.toml  README.md  build.sh
rust/latex-normalizer/src/: lib.rs
scripts/: enable_rls.sql  gen-db-types.md  patch_schema.sql  seed.sql  seed.ts
types/: canvas.ts  dashboard.ts  database.ts  forum.ts  fsrs.ts  graph.ts  library.ts  notes.ts  (+2 more)
(+350 files in other folders)
